# wheres-carmen

./: .gitignore  README.md  pyproject.toml
scripts/: excel_to_csv.py
wheres_carmen_dbt/: dbt_project.yml  profiles.yml
wheres_carmen_dbt/macros/: build_raw_table_from_seed.sql
wheres_carmen_dbt/models/analytics/: analytics_common_behaviors.sql  analytics_common_behaviors.yml  analytics_mode_agency_region.sql  analytics_mode_agency_region.yml  analytics_probability_armed_jacket_not_hat.sql  analytics_probability_armed_jacket_not_hat.yml  analytics_probability_behavior_occurs.sql  analytics_probability_behavior_occurs.yml
wheres_carmen_dbt/models/processed/: agent.sql  agent.yml  agent_files_report_city.sql  agent_files_report_city.yml  agent_files_report_city_date.sql  agent_files_report_city_date.yml  agent_files_report_date.sql  agent_files_report_date.yml  city_agent.sql  city_agent.yml  date_agent.sql  date_agent.yml  date_witness.sql  date_witness.yml  location.sql  location.yml  observation.sql  observation.yml  region.sql  region.yml  sighting.sql  sighting.yml  witness.sql  witness.yml  witness_sights_perp_date.sql  witness_sights_perp_date.yml  witness_sights_perp_region.sql  (+3 more)
wheres_carmen_dbt/seeds/: carmen_sightings_20220629061307_AFRICA.csv  carmen_sightings_20220629061307_AMERICA.csv  carmen_sightings_20220629061307_ASIA.csv  carmen_sightings_20220629061307_ATLANTIC.csv  carmen_sightings_20220629061307_AUSTRALIA.csv  carmen_sightings_20220629061307_EUROPE.csv  carmen_sightings_20220629061307_INDIAN.csv  carmen_sightings_20220629061307_PACIFIC.csv
(+25 files in other folders)
