[tool.poetry]
name = "wheres-carmen"
version = "0.1.0"
description = ""
authors = ["Crystal Taylor <crystalgtaylor1991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-duckdb = "^1.8.1"
dbt-core = "^1.8.3"
duckdb = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
