[tool.poetry]
name = "wheres-carmen"
version = "0.1.0"
description = ""
authors = ["Crystal Taylor <crystalgtaylor1991@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
dbt-duckdb = "^1.8.1"
dbt-core = "^1.8.3"
duckdb = "^1.0.0"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
logging = "^0.4.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
